[tool.poetry]
name = "helper-auth"
version = "0.6.0"
description = "Request authentication using existing credential helpers."
readme = "README.md"
authors = ["Michal Porteš <michalportes1@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mportesdev/helper-auth"

[tool.poetry.dependencies]
python = "^3.7"
requests = {version = "^2", optional = true}

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cases = "^3"

[tool.poetry.group.dev.dependencies]
tox = "^4"
pre-commit = {version = "^3", python = "^3.8"}

[tool.poetry.extras]
requests = ["requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
