[tool.poetry]
name = "helper-auth"
version = "0.7.0"
description = "Request authentication using existing credential helpers."
readme = "README.md"
authors = ["Michal Porteš <michalportes1@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mportesdev/helper-auth"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent"
]
keywords = ["http", "requests", "credentials"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
tox = "^4"
pre-commit = {version = "^3", python = "^3.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
